--- a/src/main/webapp/views/main.html
+++ b/src/main/webapp/views/main.html
@@ -4,7 +4,7 @@
     <form role="form" ng-submit="addTodo()">
         <div class="row">
             <div class="input-group">
-                <input type="text" ng-model="todo" placeholder="What needs to be done?" class="form-control">
+                <input type="text" ng-model="todo.text" placeholder="What needs to be done?" class="form-control">
 				<span class="input-group-btn">
 					<input type="submit" class="btn btn-primary" value="Add">
 				</span>
@@ -18,7 +18,7 @@
     <div ui-sortable ng-model="todos">
         <p class="input-group" ng-repeat="todo in todos" style="padding:5px 10px; cursor: move;">
 
-            <input type="text" class="form-control" ng-model="todo">
+            <input type="text" class="form-control" ng-model="todo.text">
 					<span class="input-group-btn">
 							<button class="btn btn-danger" ng-click="removeTodo($index)" aria-label="Remove">x</button>
 					</span>
